# IN8011-HW-AutoCorrection

./: .codeclimate.yml  .gitignore  README.md  __init__.py  config.py  config_01.py  config_02.py  config_03.py  config_04.py  config_05.py  config_06.py  config_07.py  config_08.py  config_09.py  config_10.py  pyproject.toml  requirements.txt  run.py
.github/workflows/: test.yaml
Example_for_HW1/: markdown_output.md
HW01/given/: main_partial.c  main_partial_correction.c
Helpers/: custom_markdown.py  custom_printing.py
Testing/: __init__.py  test_homework.py
app/: main.py
app/utilities/: reporting.py  testing.py  validation.py
configs/: config_00.py  config_01.py  config_02.py  config_03.py  config_04.py  config_05.py  config_06.py  config_07.py  config_08.py  config_09.py  config_10.py
examples/: markdown_output.md  report_HW01.md
reports/: report_HW01.md
src/: main.py
src/utilities/: custom_markdown.py  custom_printer.py  custom_printing.py  reporting.py  testing.py  validation.py  validator.py
tests/: test_configurations.py  test_custom_printer.py  test_custom_printing.py  test_example_homework.py  test_reporting.py
